--- a/src/config.json
+++ b/src/config.json
@@ -145,6 +145,12 @@
             "var" : "reaction_filter",
             "kwargs" : {},
             "save" : ["db"]
+        },
+        "HackedAccounts": {
+            "path": "src.core.helpers.hacked_acc_detection",
+            "var": "hacked_accs",
+            "kwargs": {},
+            "save": []
         }
     }
 }
